--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -5,10 +5,10 @@
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Homes</h1>
-    <%= link_to "New home", new_home_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <%# <%= link_to "New home", new_home_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %> 
   </div>
 
   <div id="homes" class="min-w-full">
-    <%= render @homes %>
+    <%# <%= render @homes %> 
   </div>
 </div>
