--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -2,6 +2,12 @@
   <% if notice.present? %>
     <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
   <% end %>
+  <% if user_signed_in? %> 
+    <div> Welcome <%= current_user.email %> </div> 
+    <%= button_to "Sign out", destroy_user_session_path, method: :delete %> 
+  <% else %>
+    <%= button_to "Sign in", new_user_session_path %> 
+  <% end %>
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Homes</h1>
