--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -4,9 +4,9 @@
   <% end %>
   <% if user_signed_in? %> 
     <div> Welcome <%= current_user.email %> </div> 
-    <%= button_to "Sign out", destroy_user_session_path, method: :delete %> 
+    <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: "text-white ml-2 rounded-lg py-3 px-5 bg-blue-600 inline-block font-medium"  %> 
   <% else %>
-    <%= button_to "Sign in", new_user_session_path %> 
+    <%= button_to "Sign in", new_user_session_path, class: "text-white ml-2 rounded-lg py-3 px-5 bg-blue-600 inline-block font-medium"  %> 
   <% end %>
 
   <div class="flex justify-between items-center">
