--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -3,7 +3,7 @@
     <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
   <% end %>
   <% if user_signed_in? %> 
-    <div> Welcome <%= current_user.email %> </div> 
+    <div> Welcome <%= current_user.username %> </div> 
     <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: "text-white ml-2 rounded-lg py-3 px-5 bg-blue-600 inline-block font-medium"  %> 
   <% else %>
     <%= button_to "Sign in", new_user_session_path, class: "text-white ml-2 rounded-lg py-3 px-5 bg-blue-600 inline-block font-medium"  %> 
