--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -9,6 +9,7 @@
     <%= button_to "Sign in", new_user_session_path, class: "text-white ml-2 rounded-lg py-3 px-5 bg-blue-600 inline-block font-medium"  %> 
   <% end %>
 
+  <%= link_to 'Account', current_user %>
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Homes</h1>
     <%# <%= link_to "New home", new_home_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %> 
