--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,28 @@
       <p><%= link_to event.title, event,  class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium m-2" %></p>
       <!-- Add more event details here -->
     <% end %>
+    <!-- app/views/users/show.html.erb -->
+    <h2>Upcoming Events</h2>
+    <ul>
+      <% @user.attended_events.upcoming.each do |event| %>
+        <li><%= event.name %></li>
+      <% end %>
+    </ul>
 
+    <h2>Past Events</h2>
+    <ul>
+      <% @user.attended_events.past.each do |event| %>
+        <li><%= event.name %></li>
+      <% end %>
+    </ul>
+
+    <!-- app/views/users/show.html.erb -->
+    <h2>Attended Events</h2>
+    <ul>
+      <% @user.attended_events.each do |event| %>
+        <li><%= event.name %></li>
+      <% end %>
+    </ul>
     <%= link_to "Edit this user", edit_user_path(@user), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
     <div class="inline-block ml-2">
       <%= button_to "Destroy this user", user_path(@user), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
