--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -9,7 +9,7 @@
     <h2>Attendees</h2>
     <ul>
       <% @event.attendees.each do |attendee| %>
-        <li><%= attendee.name %></li>
+        <li><%= attendee.username %></li>
       <% end %>
     </ul>
 
@@ -19,6 +19,12 @@
       <%= button_to "Destroy this event", event_path(@event), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
     </div>
     <%= link_to "Back to events", events_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <button id="attend-button" data-event-id="<%= @event.id %>" , class="ml-2 rounded-lg py-3 px-5 bg-blue-500 inline-block font-medium text-white">Attend this Event</button>  
+    <%= form_with url: event_attendances_path(@event), method: :post do |form| %>
+      <%= form.submit "Attend this Event" %>
+    <% end %>
+      <%= button_to 'Unattend this Event', event_attendance_path(@event, current_user), method: :delete %>
+    <% if @event.attendees.include?(current_user) && @event.time > Time.now %>
+    hello world
+    <% end %>
   </div>
 </div>
